--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 body {
-    color: deeppink;
+    color: black;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #dddddd;
+    margin 0 auto;
+}
+#container h1 {
+    font-size: 25px;
 }
